sandc/test/fixtures/pbtRegression/shouldSucceed/unnamedPackage/Foo.sand
pub class Foo {
    pub left: Foo?;
    pub middle: Bar?;
    pub right: Baz?;
}