sandc/test/fixtures/pbtRegression/shouldFail/unqualifiedNamedFromDifferentlyNamed/Foo.sand
package foo;

pub class Foo {

}